2010-12-31  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16231: Mail not sent if safe mode is on (Thanks to Boris Gulay)

2010-12-30  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15034: Login to backend fails with IPv6 Address as HTTP_HOST (Thanks to Roland Schenke)
	* Fixed bug #10480: Add missing header in auto_respond_msg (Thanks to Christian Buelter)

2010-12-29  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16849: [Unit tests] fixPermissions* tests rely on availability of posix_getegid() (Thanks to Steffen Gebert)
	* Fixed bug #16847: Use Tx_Phpunit_Service_TestFinder for finding the path of the Core unit tests (Thanks to Oliver Klee)

2010-12-28  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15969: Task Center - sys_action: setting labels_ignoreprefix from sql query is ignored (Thanks to Andreas Kiessling)

2010-12-28  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16093: Media content object with selection of "HTML Embed Element" does not respect dimension settings (Thanks to Simon Schaufelberger)

2010-12-28  Benjamin Mack  <benni@typo3.org>

	* Release of TYPO3 4.4.6

2010-12-28  Benjamin Mack  <benni@typo3.org>

	* Revert change #16614 (rev. 9684): common.js resets TYPO3 namespace / Fixed regression #16831: 'Ext' is undefinded, Line: 81, js/common.js

2010-12-26  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #16661: include TSRef changes for t3editor code completion (thanks to Christian Kartnig)

2010-12-23  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16825: Fatal error in lang.php (thanks to Georg Ringer)

2010-12-21  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16786: Versioning: Generating preview link not working (thanks to Frederic Gaus)

2010-12-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16760: RTE transformation removes all span tags on save after upgrade TYPO3 4.4.5

2010-12-20  Tolleiv Nietsch  <typo3@tolleiv.de>
